[tool.poetry]
name = "myfirsttest"
version = "0.1.0"
description = ""
authors = ["Gregory Kurkin <monstercondo@gmail.com>"]
readme = "README.md"
packages = [{ include = "package-name" }]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
